--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,16 @@
 # misc
 .DS_Store
 *.pem
+Thumbs.db
 
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -39,3 +43,27 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
+
+.github/*
+# remove this line to unignore the .github folder
+
+src/graphql/generated/client.ts
+src/server/generated/server.ts
+src/**/generated/schema.graphql
+src/gql
+# GraphQL Codegen
+src/graphql/generated/
+src/server/graphql/generated/
+*.snap
