chore: stylelint config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,12 @@
 	},
 	"typescript.preferences.importModuleSpecifier": "non-relative",
 	"javascript.preferences.importModuleSpecifier": "non-relative",
-	"typescript.preferences.autoImportSpecifierExcludeRegexes": [
-		"^@mui/[^/]+$"
-	]
+	"stylelint.validate": [
+    "css",
+    "html",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
 }
