--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "task-manager",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "npm run codegen && next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "lint:styles": "stylelint \"**/*.{css,scss,tsx,jsx,html}\"",
+    "lint:styles:fix": "stylelint \"**/*.{css,scss,tsx,jsx,html}\" --fix",
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -37,7 +40,6 @@
     "mongoose-lean-virtuals": "^2.1.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
-    "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
@@ -78,8 +80,15 @@
     "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^16.2.7",
     "playwright": "^1.57.0",
+    "postcss": "^8.5.6",
+    "postcss-html": "^1.8.0",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-tailwindcss": "^1.0.1",
+    "stylelint-high-performance-animation": "^1.11.0",
+    "stylelint-prettier": "^5.0.3",
     "tailwindcss": "^4.1.18",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
