--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   mongo:
     image: mongo:6.0
-    restart: always
+    restart: unless-stopped
     volumes:
       - mongo-data:/data/db
     ports:
@@ -9,10 +9,16 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-example}
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.runCommand({ ping: 1 })"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   mongo-express:
     image: mongo-express:1-20-alpine3.19
-    restart: always
+    restart: unless-stopped
     ports:
       - "8081:8081"
     environment:
@@ -20,14 +26,15 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${ME_CONFIG_MONGODB_ADMINUSERNAME:-root}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${ME_CONFIG_MONGODB_ADMINPASSWORD:-example}
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
 
   app:
     build:
       context: .
       args:
         - MONGODB_URI=${MONGODB_URI:-mongodb://root:example@mongo:27017}
-    restart: always
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
@@ -38,7 +45,14 @@ services:
       - GITHUB_SECRET=${GITHUB_SECRET:-""}
       - GITHUB_ID=${GITHUB_ID:-""}
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      interval: 15s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
 volumes:
   mongo-data:
